--- a/infoVoli.css
+++ b/infoVoli.css
@@ -77,3 +77,21 @@ tr:nth-child(even) {
     width: 20px;
     margin-left: 15px;
 }
+
+.attractions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(112, 128, 144, 0.89);
+    padding: 5px;
+    margin: 20px;
+    width: 90%;
+}
+
+.attractionsImage {
+    height: 230px;
+    width: 280px;
+    padding-bottom: 10px;
+    margin: 0px 10px;
+}
